Ingress-Nginx-Rule/path-based-routing.yml
#$ echo "
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    nginx.ingress.kubernetes.io/app-root: /app1
   annotations:
#    nginx.ingress.kubernetes.io/app-root: /
#    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/proxy-http-version: "1.0"
#    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
   name: rootss
   namespace: wow-test

spec:
  ingressClassName: nginx
  rules:
  - host:  micro.wowapp.tech
    http:
      paths:
      - path: /kyc/(.*)
        pathType: Prefix
        backend:
          service:
            name: wow-backend-kyc-service
            port: 
              number: 6969

      - path: /centralized/(.*)
        pathType: Prefix
        backend:
          service:
            name: wow-micro-service-centralized-assets
            port:
              number: 80

      - path: /enterprise/(.*)
        pathType: Prefix
        backend:
           service:
             name: wow-micro-service-enterprise-apis
             port:
               number: 80

      - path: /application/(.*)
        pathType: Prefix
        backend:
           service:
             name: wow-micro-service-application-remote-config 
             port:
               number: 80
       
      - path: /user/(.*)
        pathType: Prefix
        backend:
           service:
             name: wow-backend-user
             port:
               number: 80

      - path: /notary/(.*)
        pathType: Prefix
        backend:
           service:
             name: wow-micro-service-notary-apis
             port:
               number: 80
      
      - path: /marketplace/(.*)
        pathType: Prefix
        backend:
           service:
             name: wow-micro-service-marketplace-api
             port:
               number: 80
     
      - path: /physical/(.*)
        pathType: Prefix
        backend:
           service:
             name: wow-micro-service-physical-assets
             port:
               number: 80
